bookinfo/deployment-demo/blue-green-deployment/templates/bookinfo-gw.yaml
kind: Gateway
apiVersion: networking.istio.io/v1beta1
metadata:
  name: bookinfo-gw
  namespace: bookinfo
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 8000
        name: http-bookinfo-productpage
        protocol: HTTP
      hosts:
        - '*'
      tls: {}
