bookinfo/deployment-demo/blue-green-deployment/templates/productpage-request-routing.yaml
kind: DestinationRule
apiVersion: networking.istio.io/v1beta1
metadata:
  namespace: bookinfo
  name: productpage
spec:
  host: productpage.bookinfo.svc.cluster.local
  subsets:
    - name: v1
      labels:
        version: v1
---
kind: VirtualService
apiVersion: networking.istio.io/v1beta1
metadata:
  namespace: bookinfo
  name: productpage
spec:
  http:
    - route:
        - destination:
            host: productpage.bookinfo.svc.cluster.local
            subset: v1
          weight: 100
  hosts:
    - '*'
  gateways:
    - bookinfo/bookinfo-gw
